[package]
name = "ibmcloud-iam"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["rt"]}
reqwest = { version = "0.11", features = ["blocking"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
url = "2.2"

tracing = "0.1"
tracing-subscriber = "0.2"
