[package]
name = "ibmcloud-iam"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mathew Odden <mathewrodden@gmail.com>"]
repository = "https://github.com/mrodden/ibmcloud-iam-rs"
description = "A collection of Rust modules for interacting with IBM Cloud IAM (Identity and Access Managment)"
keywords = ["ibmcloud", "iam"]

[dependencies]

tokio = { version = "1", features = ["rt"]}
reqwest = { version = "0.11", features = ["blocking"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde_with = { version = "1.14", features = ["base64"]}
url = "2.2"
openssl = "0.10"
jwt = { version = "0.16", features = ["openssl"]}

tracing = "0.1"
tracing-subscriber = "0.2"
